--- a/www/app.html
+++ b/www/app.html
@@ -19,6 +19,8 @@
         <button id="next" class="button next"></button>
     </div>
     <audio id="audioPlayer"></audio>
+    <section class="sound-clips">
+    </section>
 <script src="app.js"></script>
 </body>
 </html>
