add: add recording timer.

--- a/www/app.html
+++ b/www/app.html
@@ -18,6 +18,7 @@
         <button id="record" class="button record"></button>
         <button id="next" class="button next"></button>
     </div>
+    <div id="timer"></div>
     <audio id="audioPlayer"></audio>
 <script src="app.js"></script>
 </body>
